--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@
     <p>Curso: <em>Automatas y Lenguajes Formales</em></p>
   </section>
 
+  <!-- 🔗 NUEVA SECCIÓN DE RECURSOS -->
+  <section id="recursos" class="section card">
+    <h2>📎 Recursos del Proyecto</h2>
+    <p>Accede al <strong>video explicativo</strong> y al <strong>informe técnico</strong> de la Máquina de Turing desde el siguiente enlace:</p>
+
+    <div class="links-container">
+      <a href="https://drive.google.com/drive/folders/TU_ENLACE_AQUI" target="_blank" class="drive-link">
+        🔗 Ver Video Explicativo e Informe (Google Drive)
+      </a>
+    </div>
+
+    <p class="small">
+      *El enlace dirige a una carpeta en Google Drive que contiene el informe en PDF y el video explicativo del funcionamiento del proyecto.
+    </p>
+  </section>
+
   <footer class="footer">
     © 2025 — Proyecto Máquina de Turing desarrollado por Sergio Gramajo Pineda "El chejo"
   </footer>
@@ -112,3 +128,4 @@
   <script src="main.js"></script>
 </body>
 </html>
+
