--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <p class="small">
-      *El enlace dirige a una carpeta en Google Drive que contiene el informe en PDF y el video explicativo del funcionamiento del proyecto.
+      Gracias!
     </p>
   </section>
 
@@ -128,4 +128,5 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
